--- a/#style.css
+++ b/#style.css
@@ -64,3 +64,18 @@ th td{
 th{
     background-color: #afdbc9;
 }
+h1{
+    background-color: #e9f5dd;
+}
+h1{
+    font-family: verdana;
+    font-size: 1em;
+    font-weight: 600px;
+    color: aqua;
+}
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    color: rgb(197, 16, 16);
+}
